fix: more menu layout issue

--- a/src/ui/components/DropdownMenu/styles.scss
+++ b/src/ui/components/DropdownMenu/styles.scss
@@ -81,6 +81,7 @@
   display: none;
   list-style-type: none;
   margin: 0;
+  max-width: 245px;
   padding: 4px 24px 20px;
   position: absolute;
   top: 30px;
